[Enhancement #369] Support multilingual RDF containers in the Jena driver.